@@ -83,6 +83,11 @@ entry has not been changed since it was created, then the entry creation date/ti
 If the entry was created before PasswordSafe saved these fields, then all fields may still be blank.
 Note: This is a change to what is displayed and the entries are not updated to populate these fields.</td>
 </tr>
+<td align="center" width="100">n/a</td>
+<td>Display of the details of the entries' differences in the Compare database results dialog by
+invoking the compare selected entries dialog via the right click context menu on columns other than
+the first 2 columns (used for other functions).</td>
+</tr>
 <tr>
 <td align="center" width="100">n/a</td>
 <td>Portuguese (Brazil) installation instructions added, thanks to Andreas.</td>
