@@ -324,7 +324,7 @@ BEGIN
     POPUP ""
     BEGIN
         MENUITEM "View Entry",                  ID_MENUITEM_COMPVIEWEDIT
-        MENUITEM "Copy to Original",             ID_MENUITEM_COPY_TO_ORIGINAL
+        MENUITEM "Copy to Original",            ID_MENUITEM_COPY_TO_ORIGINAL
         MENUITEM "Synchronize",                 ID_MENUITEM_SYNCHRONIZE
     END
 END
@@ -343,6 +343,14 @@ BEGIN
     POPUP ""
     BEGIN
         MENUITEM "Edit Entry",                  ID_MENUITEM_COMPVIEWEDIT
+    END
+END
+
+IDR_POPCOMPAREBOTH MENU
+BEGIN
+    POPUP ""
+    BEGIN
+        MENUITEM "Compare entries...",          ID_MENUITEM_COMPARE_ENTRIES
     END
 END
 
